--- a/index.html
+++ b/index.html
@@ -548,6 +548,15 @@ function applyBillPaymentsToDebt(){
     debt.balance = Math.max(
       Number(debt.balance) - principal,
       0
+
+const card = [...debtT.querySelectorAll(".debt-card")]
+  .find(c => c.dataset.debtId === debtId);
+
+if(card){
+  card.querySelector(".interest").textContent  = money(interest);
+  card.querySelector(".principal").textContent = money(principal);
+  card.querySelector(".newbal").textContent    = money(debt.balance);
+}
     );
   });
 
