--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@ td[data-label="Name"] input{
   min-width: 140px;
 }
 
+td[data-label="Name"] input{
+  min-width: 140px;
+}
+
+td[data-label="Remove"]{
+  overflow: visible;
+}
 .remove{ cursor:pointer; color:#94a3b8; font-size:18px; user-select:none; }
 .remove:hover{ color:#ef4444; }
 
@@ -444,12 +451,12 @@ td[data-label="Name"] input{
   </select>
 </div>
     <table>
-    <thead>
+   <thead>
   <tr>
     <th style="width:44px;">✔</th>
     <th style="width:22%;">Due</th>
     <th style="width:22%;">Paid</th>
-    <th>Name</th>
+    <th style="width:26%;">Name</th>
     <th style="width:14%;">Amount</th>
     <th style="width:90px;">Recurring</th>
     <th style="width:18%;">Linked Debt</th>
